--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,39 +8,47 @@
 
   <ng-container [ngSwitch]="info.status">
     <ng-container *ngSwitchCase="REQUEST_STATE.SUCCESS">
-      <div class="entry" *ngFor="let i of info.data">
+      <div class="entry" *ngFor="let stop of info.data">
         <div class="entry__header">
-          <span class="entry__header__title">{{i.CommonName}}</span> <!--{{i.Distance | number:'1.0-0'}}m-->
+          <span class="entry__header__title">{{stop.CommonName}}</span> <!--{{i.Distance | number:'1.0-0'}}m-->
           <span class="spacer"></span>
-          <a href="https://maps.google.com/?q={{i.Lat}},{{i.Lon}}" class="entry__header__link">
-            {{i.Distance | number:'1.0-2'}} mi
-            <mat-icon class="entry__header__icon" aria-hidden="false" [attr.aria-label]="'Directions to '+i.CommonName">
+          <a href="https://maps.google.com/?q={{stop.Lat}},{{stop.Lon}}" class="entry__header__link" target="blank">
+            {{stop.Distance | number:'1.0-2'}} mi
+            <mat-icon class="entry__header__icon" aria-hidden="false"
+                      [attr.aria-label]="'Directions to '+stop.CommonName">
               map
             </mat-icon>
           </a>
         </div>
-        <table mat-table [dataSource]="i.Predictions" class="mat-elevation-z5 entry__table">
-          <ng-container matColumnDef="RouteID">
-            <th mat-header-cell *matHeaderCellDef> Bus No.</th>
-            <td mat-cell *matCellDef="let element"> {{element.RouteID}} </td>
-          </ng-container>
+        <div class="mat-elevation-z5">
+          <table mat-table [dataSource]="stop.Predictions" class="entry__table">
+            <ng-container matColumnDef="RouteID">
+              <th mat-header-cell *matHeaderCellDef> Bus No.</th>
+              <td mat-cell *matCellDef="let element"> {{element.RouteID}} </td>
+            </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="Destination">
-            <th mat-header-cell *matHeaderCellDef> Destination</th>
-            <td mat-cell *matCellDef="let element"> {{element.Destination}} </td>
-          </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="Destination">
+              <th mat-header-cell *matHeaderCellDef> Destination</th>
+              <td mat-cell *matCellDef="let element"> {{element.Destination}} </td>
+            </ng-container>
 
-          <!-- Weight Column -->
-          <ng-container matColumnDef="TimeLeft">
-            <th mat-header-cell *matHeaderCellDef> Time left</th>
-            <td mat-cell *matCellDef="let element"> {{element.TimeLeft | busTime}} </td>
-          </ng-container>
+            <!-- Weight Column -->
+            <ng-container matColumnDef="TimeLeft">
+              <th mat-header-cell *matHeaderCellDef> Time left</th>
+              <td mat-cell *matCellDef="let element"> {{element.TimeLeft | busTime}} </td>
+            </ng-container>
 
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+
+          </table>
+          <div class="entry__message" *ngIf="stop.Predictions.length == 0">
+           No arrivals within the next 30 minutes.
+          </div>
+        </div>
       </div>
     </ng-container>
     <div class="centered" *ngSwitchCase="REQUEST_STATE.LOCATION_PERMISSION_DENIED">
